# community-crisis-predictor

./: .env.example  .gitignore  Makefile  README.md  project_overview.md  pyproject.toml  run_pipeline.sh
.github/workflows/: ci.yml  collect_data.yml  retrain.yml
.rules/: context.md
.streamlit/: secrets.toml.example
config/: default.yaml  intervention_playbook.md
config/lexicons/: distress.txt  domestic_stress.txt  economic_stress.txt  help_seeking.txt  hopelessness.txt  isolation.txt  suicidality.txt
data/: alerts.db  alerts.json
data/features/: feature_build_meta.json  features.parquet
data/models/: anxiety_feature_stats.json  anxiety_lstm.pt  anxiety_lstm_calibrator.json  anxiety_xgb.pkl  anxiety_xgb_calibrator.json  depression_feature_stats.json  depression_lstm.pt  depression_lstm_calibrator.json  depression_xgb.pkl  depression_xgb_calibrator.json  eval_results.json  lonely_feature_stats.json  lonely_lstm.pt  lonely_lstm_calibrator.json  lonely_xgb.pkl  mentalhealth_feature_stats.json  mentalhealth_lstm.pt  mentalhealth_lstm_calibrator.json  mentalhealth_xgb.pkl  mentalhealth_xgb_calibrator.json  suicidewatch_feature_stats.json  suicidewatch_lstm.pt  suicidewatch_lstm_calibrator.json  suicidewatch_xgb.pkl  suicidewatch_xgb_calibrator.json
data/reports/: allocation.json  cross_subreddit_generalization.json  granger_causality.json  pipeline_profile.json
docs/: ISSUES.md  PLAN.md  PROGRESS.md  dashboard_redesign_mockup.html
logs/: predictions.jsonl
reports/: technical_report.docx  technical_report.md
scripts/: migrate_briefs_to_json.py
serving/: README.md  main.py  requirements.txt
serving/tests/: test_api.py
src/: config.py
src/collector/: arctic_shift_loader.py  historical_loader.py  manifest.py  privacy.py  redarcs_loader.py  reddit_client.py  storage.py  synthetic.py  zenodo_loader.py
src/core/: __init__.py  domain_config.py  logging_config.py  ui_config.py
src/dashboard/: Analyst_Dashboard.py  app.py  bootstrap.py  briefs.py  charts.py  components.py  data_access.py  demo_utils.py  requirements.txt  state.py  types.py  view_helpers.py
src/data_quality/: completeness.py
src/features/: behavioral.py  distress.py  linguistic.py  pipeline.py  progress_util.py  sentiment.py  temporal.py  topics.py
src/labeling/: distress_score.py  target.py
src/modeling/: calibration.py  eda.py  evaluate.py  explain.py  granger.py  label_audit.py  splits.py  train_rnn.py  (+1 more)
tests/: conftest.py
(+138 files in other folders)
