[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "community-crisis-predictor"
version = "0.1.0"
description = "Predict community mental health crises from Reddit data"
requires-python = ">=3.10,<4.0"
dependencies = [
    "pandas>=2.0,<3.0",
    "pyarrow>=14.0,<24.0",
    "pyyaml>=6.0,<7.0",
    "praw>=7.7,<8.0",
    "xgboost>=2.0,<4.0",
    "scikit-learn>=1.3,<2.0",
    "vaderSentiment>=3.3,<4.0",
    "textstat>=0.7,<1.0",
    "bertopic>=0.16,<1.0",
    "sentence-transformers>=2.2,<6.0",
    "shap>=0.43,<1.0",
    "plotly>=5.18,<7.0",
    "optuna>=3.4,<5.0",
    "numpy>=1.24,<3.0",
    "scipy>=1.11,<2.0",
    "requests>=2.31,<3.0",
    "gdown>=5.2,<6.0",
    "tqdm>=4.66,<5.0",
    "streamlit>=1.28,<2.0",
    "torch>=2.0,<3.0",
    "anthropic>=0.40,<1.0",
    "openai>=1.40,<3.0",
    "python-json-logger>=2.0,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[tool.poetry]
package-mode = false

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    'ignore:codecs\.open\(\) is deprecated\. Use open\(\) instead\.:DeprecationWarning:vaderSentiment\.vaderSentiment',
]
